# CourseGenius

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.override.template.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
config/: .env.template
docker/: .buildexclude  ci.sh
docker/dev/django/: Dockerfile
docker/dev/nginx/: Dockerfile  dev.conf
docker/dev/postgresql/: Dockerfile
docker/dev/postgresql/data/: postgresql.conf
docker/dev/scripts/: start_asgi.sh  start_beat.sh  start_celery.sh  start_dev.sh
server/: asgi.py  celery.py  constant.py  routing.py  urls.py
server/apps/course_management/: admin.py  urls.py
server/apps/course_management/logic/serializers/: component_dependency_serializer.py  course_component_serializer.py  course_serializer.py
server/apps/course_management/logic/services/: course_component_service.py
server/apps/course_management/migrations/: 0001_course.py  0002_component.py
server/apps/course_management/models/: course.py  course_component.py
server/apps/course_management/utils/: permissions.py
server/apps/course_management/views/: course_api_view.py  course_component_api_view.py
server/apps/main/: admin.py  urls.py
server/apps/main/fixtures/: email_template.yaml  institute.yaml
server/apps/main/logic/: __init__.py
server/apps/main/logic/serializers/: institue_serializer.py  login_serializer.py  password_change_serializer.py  password_reset_serializer.py  (+1 more)
server/apps/main/migrations/: 0001_initial.py  0002_institute.py  0003_alter_emailtemplate_options.py  0004_is_admin.py
server/apps/main/models/: __init__.py  email_template.py  institute.py  permission_category.py  permission_group.py  user.py
server/apps/main/utils/: api_exceptions.py  email_sender.py  exceptions.py
server/apps/main/views/: change_password_api_view.py  institute_api_view.py  login_api_view.py  password_reset_api_view.py  register_api_view.py  user_api_view.py
server/apps/utility/: base_mixin.py  blameable_mixin.py  decorator.py  institute_mixin.py  permissions.py  security.py
server/apps/web_socket/: consumers.py  routing.py
server/apps/worker/: tasks.py
server/settings/: __init__.py
server/settings/components/: celery.py  common.py  email.py  rest_framework.py  simple_jwt.py
server/settings/environments/: development.py
server/templates/txt/: humans.txt
tests/: conftest.py
tests/factories/: __init__.py
tests/test_server/: test_urls.py
(+9 files in other folders)
